<resources>
    <string name="app_name">移动业务系统</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="jiandang">建档</string>
    <string name="dengji">登记</string>
    <string name="tijian">体检</string>
    <string name="caijiang">采浆</string>
    <string name="diaodu">调度</string>
    <string name="chaxun">查询</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pulp_machine_for_nurse">选择登录身份</string>
    <string name="title_activity_pulp_machine_select">选择献浆员分配到的采浆设备</string>
    <string name="title_activity_pulp_machine_select_result">浆机分配情况</string>
    <string name="title_activity_login">选择登录身份</string>
    <string name="title_activity_identity">录入身份证</string>
    <string name="title_activity_fingerprint">指纹认证</string>
    <string name="title_activity_fingerprint_xj">献浆员指纹认证</string>
    <string name="title_activity_fingerprint_doc">医生（护士）指纹认证</string>
    <string name="title_activity_face_collection">人脸采集</string>
    <string name="title_activity_register_over">登记完成</string>
    <string name="title_activity_physical_examing">体检中</string>
    <string name="title_activity_physical_exam">体检</string>
    <string name="title_activity_physical_todo">待体检</string>
    <string name="title_activity_physical_over">体检完成</string>
    <string name="title_activity_physical_pass">体检通过</string>
    <string name="title_activity_bloodplasma_collection_todo">待采浆</string>
    <string name="title_activity_bloodplasma_collecting">采浆中</string>
    <string name="title_activity_bloodplasma_collection_over">采浆完成</string>
    <string name="title_activity_dispatch_state">调度状态</string>
    <string name="title_activity_physical_not_pass">体检未通过</string>
    <string name="title_activity_serch_result">查询结果</string>
    <string name="title_activity_physical_exam_not_pass">PhysicalExamNotPassActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_physical_exam_ask">健康询问</string>
    <string name="title_activity_physical_exam_note">备注</string>
    <string name="title_activity_physical_exam_check">体格检查</string>
    <string name="title_activity_physical_exam_result">体格结果</string>
    <string name="go_physical_todo">进入待体检</string>
    <string name="go_physical">去体检</string>
    <string name="go_bloodplasma_todo">进入待采浆</string>
    <string name="go_bloodplasma">去采浆</string>
    <string name="change_mechine">换机</string>
    <string name="physical_exam">体检</string>
    <string name="physical_pass">体检合格</string>
    <string name="physical_not_pass">体检不合格</string>
    <string name="sure">确定</string>
    <string name="physsical_again">重新体检</string>
    <!-- 体检问询条目-不可以献浆部分 -->
    <string name="item_a1.1">1.1  体弱多病，经常头晕、眼花、耳鸣、晕血、晕针、经常晕倒史及有美尼尔氏病者。</string>
    <string name="item_a1.2">1.2  有性病、麻风病、艾滋病以及HIV和HIV-2呈阳性。</string>
    <string name="item_a1.3">1.3  有肝病历史、经检测HBsAg阳性、HCA抗体阳性（甲型肝炎临床治愈1年后，连续3年每次间隔1个月ALT化验正常者，可供血浆）。</string>
    <string name="item_a1.4">1.4  患反复发作过敏性疾病、荨麻疹、支气管哮喘、药物过敏者（患单纯性荨麻疹不在急性发作期者可以供血浆）。</string>
    <string name="item_a1.5">1.5  肺结核、肾结核、淋巴腺结核、骨结核患者。</string>
    <string name="item_a1.6">1.6  有心血管疾病及病史，各种心脏病、高血压、低血压、心肌炎、血栓性静脉炎者。</string>
    <string name="item_a1.7">1.7  呼吸系统疾病（包括慢性支气管炎、肺气肿、支气管扩张、肺功能不全）患者。</string>
    <string name="item_a1.8">1.8  消化系统疾病（如较严重的胃及十二指肠溃疡、慢性胃肠炎、慢性胰腺炎）患者。</string>
    <string name="item_a1.9">1.9  泌尿系统疾病（如急慢性肾炎、慢性泌尿系统感染、肾病综合征以及急慢性肾功能不全等）患者。</string>
    <string name="item_a1.10">1.10 各种血友病（包括贫血、白血病、真性红细胞增多症及各种出血凝血性疾病）患者。</string>
    <string name="item_a1.11">1.11 内分泌疾患或代谢障碍性疾病（如甲亢、肢端肥大症、尿崩症、糖尿病等）患者。</string>
    <string name="item_a1.12">1.12 器质性神经系统疾病或精神病（如脑炎、脑外伤后遗症、癫痫、精神分裂症、癔症、严重神经衰弱等）患者。</string>
    <string name="item_a1.13">1.13 寄生虫病及地方病（如黑热病、血吸虫病、丝虫病、钩虫病、绦虫病、肺吸虫病、克山病、大骨节病等）患者。</string>
    <string name="item_a1.14">1.14 恶性肿瘤及影响健康的良性肿瘤患者。</string>
    <string name="item_a1.15">1.15 已做过切除胃、肾、胆囊、脾、肺等重要脏器手术者。</string>
    <string name="item_a1.16">1.16 接触有害物质、放射性物质者。</string>
    <string name="item_a1.17">1.17 易感染人免疫缺陷病毒的高危人群，如有吸毒史者、同性恋及有多个性伙伴。</string>
    <string name="item_a1.18">1.18 克雅病（克罗依茨-雅克布病，CJD）和变异性克雅病（vCJD）患者及有家族病史者、接受过人和动物脑垂体来源物质（如生长激素、促性腺激素、甲状腺刺激素等）治疗者。接收器官（含角膜、骨髓、硬脑膜）移植者。可能暴露于牛海绵状脑病（BSE）和vCJD的人。</string>
    <string name="item_a1.19">1.19 慢性皮肤病患者，特别是传染性，过敏性炎症性全身皮肤病（如黄癣、广泛性湿疹及全身性牛皮癣等）患者。</string>
    <string name="item_a1.20">1.20 自身免疫性疾病及胶原性疾病（如系统性红斑狼疮、皮肌炎、硬皮病等）患者。</string>
    <string name="item_a1.21">1.21 被携带狂犬病病毒的动物咬伤者。</string>
    <string name="item_a1.22">1.22 医生认为不能供血浆的其他疾病患者。</string>

    <!-- 体检问询条目-暂时不可以献浆部分 -->
    <string name="item_b2.1">2.1  半月内曾作过拔牙或其他小手术者。</string>
    <string name="item_b2.2">2.2  妇女月经前后三天，月经失调、妊娠期、流产未满6个月、分娩及哺乳期未满一年者。</string>
    <string name="item_b2.3">2.3  感冒、急性胃肠炎患者痊愈未满1周，急性泌尿系统感染病痊愈未满1个月，肺炎病愈未满半年者。</string>
    <string name="item_b2.4">2.4  来自某些传染病和防疫部门特定的传染病流行高危地区的供血浆者。痢疾病愈未满半年，伤寒、布氏杆菌病病愈未满1年，3年内有过疟疾病史者</string>
    <string name="item_b2.5">2.5  接受过输血治疗者，2年内不得供血浆。</string>
    <string name="item_b2.6">2.6  被血液或组织液污染的器材致伤者或污染伤口以及施行纹身术后未满1年者。</string>
    <string name="item_b2.7">2.7  与传染病患者有密切接触史者，自接触之日起至该病最长潜伏期。</string>
    <string name="item_b2.8">2.8  接受动物血清制品者于最后一次注射后4周内。</string>
    <string name="item_b2.9">2.9  接受乙型肝炎免疫球蛋白注射者1年内。</string>
    <string name="item_b2.10">2.10 医生认为暂不能供血浆的其他疾病患者。</string>

    <!-- 体检问询条目-供血浆者接受免疫接种后采集血浆的规定 -->
    <string name="item_c3.1">除特异性免疫血浆制备时的免疫接种外，近期接受过免疫接种的无症状血浆者，经下列期限后方可供血浆：麻疹、腮腺炎、黄热、脊髓灰质炎、甲型肝炎减毒活疫苗免疫者最后一次免疫后2周，风疹活疫苗、狂犬病疫苗最后一次免疫后4周可供血浆。</string>
    <string name="identify_time_out">超时</string>
    <string name="flash_on" >关灯</string>
    <string name="flash_off">开灯</string>
    <string name="finger_ok">确认</string>
    <string name="finger_again">重采</string>
    <string name="face_collect">调整姿势,录入正面人脸</string>
    <string name="face_collect_sucess">采集成功</string>
</resources>
