<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jiaying.workstation.activity.CameraPreviewActivity">

    <include layout="@layout/comm_app_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/sfvFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/ivUI"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/ivFinger"
            android:layout_width="400px"
            android:layout_height="500px"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:layout_margin="@dimen/btn_inner_padding"
                android:id="@+id/buttonOk"
                style="@style/btn_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/finger_ok" />

            <Button
                android:layout_margin="@dimen/btn_inner_padding"
                android:id="@+id/buttonAgain"
                style="@style/btn_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/finger_again" />

            <Button
                android:layout_margin="@dimen/btn_inner_padding"
                android:id="@+id/buttonFlash"
                style="@style/btn_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/flash_off" />
        </LinearLayout>

        <SurfaceView
            android:id="@+id/sfvAnimation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>


</LinearLayout>